# carrier-logic

./: README.md  alembic.ini  package-lock.json  package.json  postcss.config.js  pyproject.toml  requirements.txt  setup.py  webpack.config.js
CarrierAnalysis/: __init__.py  analysis.py  analyze_routes.py
src/: App.js  api.js  config.py  index.js  index.jsx  index.tsx  webpack.config.js
src/api/: __init__.py  geographic.py  main.py  router.py
src/carrier_logic.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/components/: App.jsx  CarrierAnalysis.js  CarrierMap.tsx  EnhancedCarrierAnalytics.jsx  EnhancedCarrierAnalytics.tsx  TestDashboard.jsx  TestDashboard.tsx
src/data/: fmcsa_client.py
src/database/: database.py  models.py  repository.py
src/geographic/: analysis.py  processing.py  services.py  visualization.py
src/models/: carrier.py  carrier_analysis.py  geographic.py
src/repositories/: carrier_repository.py
src/services/: analysis_services.py  location_service.py
src/styles/: main.styles.css  styles.css
