[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "carrier-logic"
version = "0.1.0"
description = "Carrier analysis and tracking system"
authors = [
    {name = "Your Name"}
]
dependencies = [
    "fastapi",
    "uvicorn",
    "sqlalchemy",
    "psycopg2-binary",
    "alembic",
    "requests",
    "python-dotenv"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort"
]